Create new basecount_max variable to normalize the scale of the basecount variable.

--- a/Code/data-setup-code.Rmd
+++ b/Code/data-setup-code.Rmd
@@ -668,6 +668,7 @@ o.data <- base.data %>%
             list(z = ~arm::rescale(.))) %>% 
   mutate(troops_log = log(troops),
          troops_norm = (troops / max(troops, na.rm = TRUE)),
+         basecount_max = basecount / max(basecount, na.rm = TRUE),
          pop_log = log(pop),
          gdp_log = log(gdp),
          exports_log = log(us_imports_from_partner),
