--- a/Code/data-setup-code.Rmd
+++ b/Code/data-setup-code.Rmd
@@ -52,6 +52,7 @@ This file contains all of the script necessary to load and clean the raw data, t
 Notes:
 
 1. We use the 2018, 2019, and 2020 values for trade, GDP, population, and V-Dem scores. Updated on 2021-07-17. 
+2. There were excess observations (about 200) resulting from merges that only contained country variables. Dropped these 2021-10-15
 
 
 ## Public opinion data setup
@@ -67,19 +68,19 @@ base.list <- lapply(file.names, read_csv)
 map.list <- list()
 province.list <- list()
 
-map.list[[1]]  <- getData("GADM", country = "AUS", level = 1)
-map.list[[2]]  <- getData("GADM", country = "BEL", level = 2)
-map.list[[3]]  <- getData("GADM", country = "DEU", level = 1)
-map.list[[4]]  <- getData("GADM", country = "ITA", level = 1)
+map.list[[1]]  <- raster::getData("GADM", country = "AUS", level = 1)
+map.list[[2]]  <- raster::getData("GADM", country = "BEL", level = 2)
+map.list[[3]]  <- raster::getData("GADM", country = "DEU", level = 1)
+map.list[[4]]  <- raster::getData("GADM", country = "ITA", level = 1)
 map.list[[5]]  <- readOGR(here::here("../Military Spending/Shapefiles/japanpolygonChubu Region_AL375/Chubu Region_AL3.shp"))
-map.list[[6]]  <- getData("GADM", country = "KWT", level = 1)
-map.list[[7]]  <- getData("GADM", country = "NLD", level = 1)
-map.list[[8]]  <- getData("GADM", country = "PHL", level = 1)
-map.list[[9]]  <- getData("GADM", country = "POL", level = 1)
-map.list[[10]] <- getData("GADM", country = "PRT", level = 1)
+map.list[[6]]  <- raster::getData("GADM", country = "KWT", level = 1)
+map.list[[7]]  <- raster::getData("GADM", country = "NLD", level = 1)
+map.list[[8]]  <- raster::getData("GADM", country = "PHL", level = 1)
+map.list[[9]]  <- raster::getData("GADM", country = "POL", level = 1)
+map.list[[10]] <- raster::getData("GADM", country = "PRT", level = 1)
 map.list[[11]] <- readOGR(here::here("../Military Spending/Shapefiles/Korea regions/Korea-regions.shp"))
-map.list[[12]] <- getData("GADM", country = "ESP", level = 1)
-map.list[[13]] <- getData("GADM", country = "TUR", level = 1)
+map.list[[12]] <- raster::getData("GADM", country = "ESP", level = 1)
+map.list[[13]] <- raster::getData("GADM", country = "TUR", level = 1)
 map.list[[14]] <- readOGR(here::here("../Military Spending/Shapefiles/UK regions/UK-regions.shp"))
 
 # Create empty lists for point in poly output and final data frame output
@@ -290,7 +291,7 @@ base.provinces <- bind_rows(final.list) %>%
 ccode.list <- c("200", "210", "211", "230", "235", "255", "290", "325", "640", "690", "732", "740", "840", "900")
 
 # Base Survey Data
-base.data <- read_csv(here::here("../Book/Raw Data/opinion-data", "data-years-1-2-3-combined-20200820.csv")) %>% 
+base.data <- fread(here::here("../Book/Raw Data/opinion-data", "data-years-1-2-3-combined-20200820.csv"), sep = "auto") %>% 
   mutate(country = ifelse(country == "Poland, Rep. of", "Poland", country),
            country = ifelse(country == "Korea, Rep. of", "South Korea", country),
            country = ifelse(country == "Netherlands, The", "Netherlands", country),
@@ -603,7 +604,7 @@ o.data <- base.data %>%
          party_reps = factor(party_reps, ordered = FALSE, levels = c("Don't know/decline to answer", "Very negative", "Somewhat negative", "Neutral", "Somewhat positive", "Very positive")),
          troops_econ_nat = factor(troops_econ_nat, ordered = FALSE, levels = c("Don't know/decline to answer", "Very negative", "Negative", "Neither Positive nor negative", "Positive", "Very positive")),
          troops_econ_local = factor(troops_econ_local, ordered = FALSE, levels = c("Don't know/decline to answer", "Very negative", "Negative", "Neither Positive nor negative", "Positive", "Very positive")),
-         troops_crime_pers = factor(troops_crime_pers, ordered = FALSE, levels = c("Don't know/Decline to answer", "No", "Yes")),
+         troops_crime_pers = factor(troops_crime_pers, ordered = FALSE, levels = c("Don't know/decline to answer", "No", "Yes")),
          troops_1 = factor(troops_1, ordered = FALSE, levels = c("Don't know/decline to answer", "Very unfavorable", "Somewhat unfavorable", "Neutral", "Somewhat favorable", "Very favorable")),
          troops_1_ord = droplevels(troops_1, exclude = c("Don't know/decline to answer")),
          troops_1_ord = factor(troops_1, ordered = TRUE, levels = c("Very unfavorable", "Somewhat unfavorable", "Neutral", "Somewhat favorable", "Very favorable")),
@@ -681,7 +682,10 @@ o.data <- base.data %>%
          country = ifelse(country == "Poland, Rep. of", "Poland", country),
            country = ifelse(country == "Korea, Rep. of", "South Korea", country),
            country = ifelse(country == "Netherlands, The", "Netherlands", country),) %>% 
-  ungroup()
+  ungroup() %>% 
+  filter(!(X1 %in% c(14092:14287))) %>%  # remove observations that only include country-level values
+  mutate(across(c(theft, robbery, assault, burglary, drugrelated, sexualassault, crimedk, theft_nonpers, robbery_nonpers, assault_nonpers, burglary_nonpers, drugrelated_nonpers, sexualassault_nonpers, crimedk_nonpers), ~ifelse(.x == "2", "Yes", .x))) # Year 3 Schlesinger data had some weird coding errors wrt Yes values for specific crimes miscoding as 2 instead of Yes. This fixes that.
+
 
 
 
